# run_in_wsl_server

./: Cargo.toml  build.rs
proto/: file.proto
src/: main.rs
src/lib/: finder.rs  mimetype.rs  mod.rs  models.rs  parser.rs
src/server/: server.rs
