[package]
name = "run_in_wsl_server"
version = "0.1.0"
authors = ["Diego Magdaleno <Diego Magdaleno>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.1"
regex = "1"
mime_guess = { git = "https://github.com/DiegoMagdaleno/mime_guess", branch="master" }
tokio = { version = "0.2", features = ["full"] }
tonic = "0.3"
prost = "0.6"
futures-core = "0.3"
futures-util = "0.3"
warp = "0.2"
freedesktop_entry_parser = "1.1.1"
structopt = "0.3"
async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"

[build-dependencies]
tonic-build = "0.3"